Update for Heroku deployment

--- a/public/checkout.html
+++ b/public/checkout.html
@@ -6,7 +6,7 @@
     <meta name="description" content="A demo of a payment on Stripe" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://js.stripe.com/v3/"></script>
-    <script src="https://tbaa-ehv-4792f0431457.herokuapp.com/checkout.js" defer></script>
+    <script src="checkout.js" defer></script>
     <style>
       html, body {
         margin: 0;
