--- a/public/checkout.html
+++ b/public/checkout.html
@@ -49,6 +49,6 @@
   <div id="loading" class="loading">
     <p>Loading checkout...</p>
   </div>
-  <div id="checkout"></div>
+  <div id="checkout-container"></div>
 </body>
 </html>
